--- a/locales/en/LC_MESSAGES/testbot.po
+++ b/locales/en/LC_MESSAGES/testbot.po
@@ -7,19 +7,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-02-04 00:56+0300\n"
+"POT-Creation-Date: 2024-02-25 23:45+0300\n"
 "PO-Revision-Date: 2024-01-29 16:29+0300\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.1\n"
+"Generated-By: Babel 2.13.0\n"
 
 #: tgbot/handlers/base_mode.py:36 tgbot/handlers/chat_mode.py:46
-#: tgbot/handlers/chat_mode.py:85 tgbot/handlers/mode.py:47
+#: tgbot/handlers/chat_mode.py:86 tgbot/handlers/mode.py:47
 #: tgbot/handlers/mode.py:149
 msgid ""
 "🥺 Похоже вы достигли лимита запросов на сегодня, попробуйте через 24 "
@@ -78,7 +78,7 @@ msgstr ""
 "Now you can send messages to the bot and it will remember them🤓\n"
 "And have a dialogue with you🙃"
 
-#: tgbot/handlers/chat_mode.py:127
+#: tgbot/handlers/chat_mode.py:148
 msgid "Чат завершен"
 msgstr "Chat ended"
 
@@ -120,10 +120,13 @@ msgstr "There was an error with the TelegramAPI, try again later!"
 msgid ""
 "🆘 Помощь\n"
 "Команды которые я поддерживаю 😎\n"
-"/mode - Выбор Режима бота\n"
+"\n"
+"/mode - Выбор Режима бота(Астролог, Сценарист и т.д)\n"
+"\n"
 "/chat - Режим чата(бот будет запоминать сообщения)\n"
-"<strong>Если бот перестал отвечать, для перезагрузки нажмите</strong> - "
-"/start"
+"\n"
+"/start - <strong>Если бот перестал отвечать, для перезагрузки "
+"нажмите</strong>"
 msgstr ""
 "🆘 Help\n"
 "Teams I support 😎\n"
@@ -135,11 +138,11 @@ msgstr ""
 msgid "🦾 Выберите режим в котором будет работать бот:"
 msgstr "🦾 Select the mode in which the bot will work:"
 
-#: tgbot/handlers/mode.py:126
+#: tgbot/handlers/mode.py:124
 msgid "Режим: <strong>{mode_name}</strong> включен!"
 msgstr "Mode: <strong>{mode_name}</strong> enabled!"
 
-#: tgbot/handlers/mode.py:189
+#: tgbot/handlers/mode.py:200
 msgid "Вы вышли из режима"
 msgstr "You are out of mode"
 
@@ -170,17 +173,16 @@ msgid ""
 msgstr ""
 "🚀 Greetings!\n"
 "\n"
-"<strong>🤖 I AM A COMPLETELY FREE assistant based on the latest "
-"Gemini artificial intelligence from Google</strong>\n"
+"<strong>🤖 I AM A COMPLETELY FREE assistant based on the latest Gemini "
+"artificial intelligence from Google</strong>\n"
 "\n"
 "<strong>What I can do:\n"
-"</strong>1. 📄 <i>Writing essays, essays, reports on various "
-"themes and in different styles</i>\n"
+"</strong>1. 📄 <i>Writing essays, essays, reports on various themes and in"
+" different styles</i>\n"
 "\n"
 " 2. 🌙 <i>Interpretation of dreams</i>\n"
 "\n"
-" 3. 🔮 <i>Individual astrological forecast and compilation "
-"notal map</i>\n"
+" 3. 🔮 <i>Individual astrological forecast and compilation notal map</i>\n"
 "\n"
 " 4. 🤵‍♂ <i>Generating ideas for a startup</i>\n"
 "\n"
@@ -192,14 +194,17 @@ msgstr ""
 "🤓To find out all the options, click - /help"
 
 #: tgbot/handlers/start.py:45
-msgid "👀 Напиши мне любой вопрос"
-msgstr "👀 Write to me with any question"
-
-#: tgbot/handlers/start.py:46
 msgid "🤔 Выберите язык"
 msgstr "🤔 Select language"
 
-#: tgbot/handlers/start.py:58
+#: tgbot/handlers/start.py:46
+msgid ""
+"🤠<strong>Нажмите</strong> - /mode для выбора роли(<i>Астролог, Сценарист "
+"и т.д</i>)"
+msgstr "🤠<strong>Click</strong> - /mode to select a role(<i>Astrologer, Screenwriter "
+"etc</i>)"
+
+#: tgbot/handlers/start.py:59
 msgid "Ваш язык был изменен"
 msgstr "Your language has been changed"
 
@@ -276,4 +281,7 @@ msgstr "Security policy violation, try another request"
 #: tgbot/services/Gemini_ChatInput.py:139
 msgid " Кажется возникла ошибка, попробуйте позже  или завершите чат"
 msgstr "There seems to be an error,  try again later or end the chat"
+
+#~ msgid "👀 Напиши мне любой вопрос"
+#~ msgstr "👀 Write to me with any question"
 
