--- a/locales/testbot.pot
+++ b/locales/testbot.pot
@@ -8,17 +8,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-02-04 00:56+0300\n"
+"POT-Creation-Date: 2024-02-25 23:45+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.1\n"
+"Generated-By: Babel 2.13.0\n"
 
 #: tgbot/handlers/base_mode.py:36 tgbot/handlers/chat_mode.py:46
-#: tgbot/handlers/chat_mode.py:85 tgbot/handlers/mode.py:47
+#: tgbot/handlers/chat_mode.py:86 tgbot/handlers/mode.py:47
 #: tgbot/handlers/mode.py:149
 msgid ""
 "🥺 Похоже вы достигли лимита запросов на сегодня, попробуйте через 24 "
@@ -66,7 +66,7 @@ msgid ""
 "И вести с вами диалог🙃"
 msgstr ""
 
-#: tgbot/handlers/chat_mode.py:127
+#: tgbot/handlers/chat_mode.py:148
 msgid "Чат завершен"
 msgstr ""
 
@@ -108,21 +108,24 @@ msgstr ""
 msgid ""
 "🆘 Помощь\n"
 "Команды которые я поддерживаю 😎\n"
-"/mode - Выбор Режима бота\n"
+"\n"
+"/mode - Выбор Режима бота(Астролог, Сценарист и т.д)\n"
+"\n"
 "/chat - Режим чата(бот будет запоминать сообщения)\n"
-"<strong>Если бот перестал отвечать, для перезагрузки нажмите</strong> - "
-"/start"
+"\n"
+"/start - <strong>Если бот перестал отвечать, для перезагрузки "
+"нажмите</strong>"
 msgstr ""
 
 #: tgbot/handlers/mode.py:59
 msgid "🦾 Выберите режим в котором будет работать бот:"
 msgstr ""
 
-#: tgbot/handlers/mode.py:126
+#: tgbot/handlers/mode.py:124
 msgid "Режим: <strong>{mode_name}</strong> включен!"
 msgstr ""
 
-#: tgbot/handlers/mode.py:189
+#: tgbot/handlers/mode.py:200
 msgid "Вы вышли из режима"
 msgstr ""
 
@@ -153,14 +156,16 @@ msgid ""
 msgstr ""
 
 #: tgbot/handlers/start.py:45
-msgid "👀 Напиши мне любой вопрос"
-msgstr ""
-
-#: tgbot/handlers/start.py:46
 msgid "🤔 Выберите язык"
 msgstr ""
 
-#: tgbot/handlers/start.py:58
+#: tgbot/handlers/start.py:46
+msgid ""
+"🤠<strong>Нажмите</strong> - /mode для выбора роли(<i>Астролог, Сценарист "
+"и т.д</i>)"
+msgstr ""
+
+#: tgbot/handlers/start.py:59
 msgid "Ваш язык был изменен"
 msgstr ""
 
